- fixed '^' and '$' in regexes

0.17  2006-09-13

- Grammar::Rule is now bootstrapped with v6.pm, instead of lrep
- implemented $<KEY>
- fixed bool result of quantified terms inside tokens
- fixed parsing of <'>>'>
- replaced 'do{}' with plain function calls in some places (optimization)
- implemented hash dispatch in Grammar::Rule (optimization)

0.16  2006-08-21

- removed Class::InsideOut dependency - 5% speed optimization, but there
  seems to be some gain in RAM usage also
- token <null>

0.15  2006-08-16

- stringification is handled by the 'return object', if it exists.
- fixed '..' in char classes
- ':' is ignored inside tokens
- updated the identifier list in Common.pm

0.11 to 0.14  2006-08-09

- several fixes and optimizations in hash and array interpolation
- fixed capture aliasing

- refactored Regex runtime:
-- reuses the matching string in submatches
-- resues the Match class for Token/Rule
-- more tests
- partially implemented 'static' capture numbering

0.10  2006-07-10

- added Pugs::Runtime::Common - contains utilities shared by all perl 6 
  mini-languages, such as namespace mangling.

0.09  2006-07-06

- 'install()' creates a rule in current namespace - implemented by broquaint
- fixed quoting in emitted :ratchet code
- implemented '<@rules>' in :ratchet mode

0.08  2006-07-04

- clear a warning in Pugs::Grammar::Rule - fixed by audreyt

0.07  2006-07-04

- updated Module::Install

0.06  2006-06-26

- new module Pugs::Grammar::Precedence

0.05  2006-06-13

- fixed internal <alpha> rule

- new module Pugs::Compiler::RegexPerl5 - wraps a perl5 regex into a method that
  returns a Match object. Note that this module doesn't provide backtracking to 
  caller rules.

0.04  2006-05-24

- new modules Pugs::Compiler::Token, Pugs::Compiler::Regex
- fixed Pugs::Compiler::Rule default switches to :ratchet, :sigspace.

- implemented 'sigspace' switch - in :ratchet mode only

0.03  2006-05-20

- '<after ...>' - in :ratchet mode only
