@@ -1,3 +1,7 @@
+- implemented Matching against non-strings
+   my $rule = Pugs::Compiler::Regex->compile( '<.meth("param")>' );
+   my $match = $rule->match( $object );- implemented <at($pos)>
+- implemented <at($pos)>
 - fixed '^' and '$' in regexes
 
 0.17  2006-09-13
